--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.gunisalvo</groupId>
-	<artifactId>grappaWeb</artifactId>
+	<artifactId>smartJarro</artifactId>
 	<version>0.5.3-alpha</version>
 	<packaging>war</packaging>
-	<name>GrappaWeb</name>
-	<description>Exemplo de sistema WEB utilizando framework Grappa.</description>
+	<name>Smart Jarro</name>
+	<description>Proteja seus biscoitos.</description>
 	<dependencies>
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
@@ -44,11 +44,6 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
 			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.xml.ws</groupId>
-			<artifactId>jaxws-rt</artifactId>
-			<version>2.2.7</version>
 		</dependency>
 	</dependencies>
 	<build>
