--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.gunisalvo</groupId>
+	<groupId>org.entrementes</groupId>
 	<artifactId>smartJarro</artifactId>
 	<version>0.5.3-alpha</version>
 	<packaging>war</packaging>
@@ -24,7 +24,7 @@
 			<version>2.3.5.Final</version>
 		</dependency>
 		<dependency>
-			<groupId>org.gunisalvo</groupId>
+			<groupId>org.entrementes</groupId>
 			<artifactId>grappa</artifactId>
 			<version>0.5.2-alpha</version>
 		</dependency>
