--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,16 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.entrementes</groupId>
 	<artifactId>smartJarro</artifactId>
-	<version>0.5.3-alpha</version>
+	<version>0.5.5-alpha</version>
 	<packaging>war</packaging>
 	<name>Smart Jarro</name>
 	<description>Proteja seus biscoitos.</description>
 	<dependencies>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
@@ -26,7 +31,7 @@
 		<dependency>
 			<groupId>org.entrementes</groupId>
 			<artifactId>grappa</artifactId>
-			<version>0.5.2-alpha</version>
+			<version>0.5.5-alpha</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
